# Web_Keyboard

./: NOTE.md  README.md  VERSION.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: command_reg.rs  command_sys.rs  command_ws.rs  keyboard.rs  main.rs  test.rs  utils.rs
src-tauri/src/command_ws/: keyboard.css  keyboard.html  keyboard.js  keyboard.rs
