[package]
name = "tauri_app"
version = "0.0.0"
description = "KeyBoard"
authors = ["hugstars"]
license = ""
repository = ""
edition = "2021"


# 有关更多keys及其定义，请访问https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "1.5", features = [] }


[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = "0.2.1"
axum = "0.6.18"
local_ipaddress = "0.1.3"
enigo = "0.1.3"


[features]
# 该功能用于生产版本或"devPath"指向文件系统时
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s" 
strip = true
